# voxlink

./: .gitignore  BUILD-WINDOWS.bat  CHANGELOG.md  Cargo.toml  Dockerfile.server  LICENSE  PROJECT_REFERENCE.md  README.md  generate_certs.sh
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
.superpowers/brainstorm/45823-1775040553/content/: improvement-overview.html
.superpowers/brainstorm/45823-1775040553/state/: events  server-info
crates/app_desktop/: Cargo.toml  build.rs
crates/app_desktop/src/: automation.rs  crash_report.rs  direct_messages.rs  friends.rs  helpers.rs  lib.rs  main.rs  screen_share.rs  startup_timer.rs  tray.rs
crates/app_desktop/src/callbacks/: channel.rs  chat.rs  connection.rs  controls.rs  mod.rs  room.rs  soundboard.rs  space.rs  ui.rs
crates/app_desktop/src/signal_handler/: channel.rs  chat.rs  connection.rs  member.rs  mod.rs  room.rs  space.rs
crates/app_desktop/src/tick_loop/: keys.rs  mod.rs
crates/audio_core/: Cargo.toml
crates/audio_core/benches/: audio_benchmarks.rs
crates/audio_core/src/: buffers.rs  codec.rs  eq.rs  feedback.rs  histogram.rs  lib.rs
crates/config_store/: Cargo.toml
crates/config_store/src/: lib.rs
crates/integration_tests/: Cargo.toml  voxlink.db  voxlink.db-shm  voxlink.db-wal
crates/integration_tests/src/: lib.rs
crates/integration_tests/tests/: live_stress_test.rs  server_tests.rs  tls_test.rs  voice_pipeline_test.rs
crates/media_transport/: Cargo.toml
crates/media_transport/src/: lib.rs
crates/net_control/: Cargo.toml
crates/net_control/src/: lib.rs
crates/perf_metrics/: Cargo.toml
crates/perf_metrics/src/: lib.rs
crates/shared_types/: Cargo.toml
crates/shared_types/benches/: protocol.rs
crates/shared_types/src/: helpers.rs  lib.rs  message_data.rs  protocol.rs  screen.rs  state.rs  tests.rs  view.rs
crates/signaling_server/: Cargo.toml
crates/signaling_server/benches/: hot_path.rs
crates/signaling_server/src/: connection.rs  discovery.rs  dispatch.rs  histogram.rs  lib.rs  main.rs  metrics_server.rs  persistence.rs  tls.rs  types.rs  validation.rs
crates/signaling_server/src/handlers/: account.rs  auth.rs  calls.rs  channel.rs  channel_settings.rs  chat.rs  events.rs  friends.rs  mod.rs  moderation.rs  presence.rs  recording.rs  room.rs  scheduling.rs  space.rs  timeouts.rs  whisper.rs
crates/signaling_server/src/relay/: audio.rs  mod.rs  screen.rs  udp.rs
crates/ui_shell/: Cargo.toml  build.rs
crates/ui_shell/src/: lib.rs
crates/ui_shell/tests/: ui_visibility_layout.rs  ui_visibility_snapshots.rs
crates/ui_shell/ui/: components.slint  icons.slint  main.slint  member_widget.slint  screen_share_widget.slint  shell.slint  theme.slint
crates/ui_shell/ui/views/: chat_view.slint  home_view.slint  room_view.slint  settings_view.slint  space_view.slint  system_view.slint
crates/voice_engine/: Cargo.toml
crates/voice_engine/src/: lib.rs
deploy/: Cargo.toml  push-to-server.sh  setup-server.sh  setup-tls.sh
docs/: ARCHITECTURE.md  CI.md  IDLE_AUDIT.md  PERFORMANCE_TARGETS.md  TLS_SETUP.md  roadmap-2026-03.md  screen-share-v1.md  windows-soak.md
docs/superpowers/plans/: 2026-04-01-v093-polish.md  2026-04-16-signaling-shared-types-refactor.md  2026-04-16-v011-visual-communication.md  2026-04-17-m2-production-tls.md  2026-04-17-m3-observability-fuzzing.md  2026-04-17-m5-perf-baselines.md  2026-04-19-m6-idle-efficiency-audit.md  2026-04-19-m7-startup-instrumentation.md  2026-04-20-m8-audio-callback-histogram.md  2026-04-21-m9-memory-baselines.md  2026-04-22-m10-client-audio-telemetry.md  2026-04-22-m11-ci-macos-windows.md
docs/superpowers/plans/v011/: m2-custom-emojis.md  m3-bundled-stickers.md  m4-rich-presence.md  m5-drag-drop-uploads.md  m6-screen-share-polish.md
docs/superpowers/specs/: 2026-04-16-signaling-shared-types-refactor-design.md  2026-04-16-v011-visual-communication-design.md  2026-04-16-voxlink-roadmap.md  2026-04-17-m2-production-tls-design.md  2026-04-17-m3-observability-fuzzing-design.md  2026-04-17-m5-perf-baselines-design.md  2026-04-19-m6-idle-efficiency-audit-design.md  2026-04-19-m7-startup-instrumentation-design.md  2026-04-20-m8-audio-callback-histogram-design.md  2026-04-21-m9-memory-baselines-design.md  2026-04-22-m10-client-audio-telemetry-design.md  2026-04-22-m11-ci-macos-windows-design.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_screen_chunk_metadata.rs  fuzz_signal_message.rs  fuzz_udp_frame.rs
installer/: build-installer.ps1  build-linux.sh  build-macos.sh  build-portable.ps1  voxlink.iss
scripts/: bench-check.sh  bench-record-baseline.sh  measure-idle-cpu.sh  measure-idle.sh
tools/windows/: release-soak.ps1
