# Server-only workspace for cloud deployment.
# Only includes crates needed for signaling_server.

[workspace]
resolver = "2"
members = [
    "crates/shared_types",
    "crates/signaling_server",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util", "signal"] }
tokio-tungstenite = "0.26"
tokio-rustls = "0.26"
rustls-pemfile = "2"
futures-util = "0.3"
rand = "0.8"

[profile.release]
opt-level = 3
# No LTO — free-tier VMs have only 1GB RAM, LTO needs more
lto = false
strip = "symbols"
panic = "abort"
# More codegen units = less peak RAM during compilation
codegen-units = 4
