[package]
name = "app_desktop"
version = "0.3.4"
edition = "2021"
description = "Voxlink - Voice without limits"

build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
ui_shell = { path = "../ui_shell" }
shared_types = { path = "../shared_types" }
config_store = { path = "../config_store" }
perf_metrics = { path = "../perf_metrics" }
net_control = { path = "../net_control" }
voice_engine = { path = "../voice_engine" }
audio_core = { path = "../audio_core" }
media_transport = { path = "../media_transport" }
slint = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
device_query = { workspace = true }
directories = { workspace = true }
notify-rust = "4"
ureq = "3"
serde_json = { workspace = true }
xcap = { version = "0.9.1", default-features = false, features = ["image"] }
