[package]
name = "audio_core"
version = "0.10.3"
edition = "2021"

[dependencies]
shared_types = { path = "../shared_types" }
cpal = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
audiopus = { workspace = true }
nnnoiseless = "0.5"
hound = "3.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "audio_benchmarks"
harness = false
