[package]
name = "integration_tests"
version = "0.9.9"
edition = "2021"

[dev-dependencies]
shared_types = { path = "../shared_types" }
tokio = { workspace = true, features = ["process"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
audiopus = { workspace = true }
hound = "3.5"
