[package]
name = "integration_tests"
version = "0.10.4"
edition = "2021"

[dev-dependencies]
shared_types = { path = "../shared_types" }
tokio = { workspace = true, features = ["process"] }
tokio-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
audiopus = { workspace = true }
hound = "3.5"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tempfile = "3"
