[package]
name = "net_control"
version = "0.4.1"
edition = "2021"

[dependencies]
shared_types = { path = "../shared_types" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
futures-util = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
