[package]
name = "signaling_server"
version = "0.10.4"
edition = "2021"

[lib]
name = "signaling_server"
path = "src/lib.rs"

[[bin]]
name = "signaling_server"
path = "src/main.rs"

[dependencies]
shared_types = { path = "../shared_types" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
rand = { workspace = true }
sha2 = "0.10"
argon2 = "0.5"
x509-parser = "0.18"

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
criterion = "0.5"

[[bench]]
name = "hot_path"
harness = false
